--- a/index.html
+++ b/index.html
@@ -320,6 +320,12 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <iframe width="100%" height="720"
+                                    src="https://www.youtube.com/embed/MAZu9BGYaqo?rel=0&amp;showinfo=0&amp;autohide=1"
+                                    frameborder="0"
+                                    allowfullscreen></iframe>
+                        </div>
+                        <div class="swiper-slide">
+                            <iframe width="100%" height="720"
                                     src="https://www.youtube.com/embed/79RFbpwdvRU?rel=0&amp;showinfo=0&amp;autohide=1"
                                     frameborder="0"
                                     allowfullscreen></iframe>
@@ -416,6 +422,13 @@
                 <!-- Swiper -->
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <iframe width="376"
+                                height="315"
+                                src="https://www.youtube.com/embed/6nKWvLgQi6k?rel=0&amp;cc_load_policy=1"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
                         <div class="swiper-slide">
                             <iframe width="376" height="315"
                                     src="https://www.youtube.com/embed/qoTwIdJGOKQ?rel=0&amp;cc_load_policy=1"
@@ -709,9 +722,9 @@
             </a>
 
             <div class="press-kit__nav-link-block">
-                <a target="_blank" class="press-kit__nav-link" href="#">Factsheet</a>
-                <a target="_blank" class="press-kit__nav-link" href="#">Screeenshots</a>
-                <a target="_blank" class="press-kit__nav-link" href="#">Photo</a>
+                <a target="_blank" class="press-kit__nav-link" href="https://my.pcloud.com/publink/show?code=kZCCQx7ZJje8LJ06NmbpXIXVzqsaBSsDVV57">Factsheet</a>
+                <a target="_blank" class="press-kit__nav-link" href="https://my.pcloud.com/publink/show?code=kZCCQx7ZJje8LJ06NmbpXIXVzqsaBSsDVV57">Screeenshots</a>
+                <a target="_blank" class="press-kit__nav-link" href="https://my.pcloud.com/publink/show?code=kZCCQx7ZJje8LJ06NmbpXIXVzqsaBSsDVV57">Photo</a>
             </div>
 
         </div>
