--- a/index.html
+++ b/index.html
@@ -194,34 +194,34 @@
     <div class="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <img src="img/screenshots/1.jpg" class="img-responsive" alt="">
+                <img src="img/screenshots/1.png" class="img-responsive" alt="">
             </div>
             <div class="swiper-slide">
-                <img src="img/screenshots/2.jpg" class="img-responsive" alt="">
+                <img src="img/screenshots/2.png" class="img-responsive" alt="">
             </div>
             <div class="swiper-slide">
-                <img src="img/screenshots/3.jpg" class="img-responsive" alt="">
+                <img src="img/screenshots/3.png" class="img-responsive" alt="">
             </div>
             <div class="swiper-slide">
-                <img src="img/screenshots/4.jpg" class="img-responsive" alt="">
+                <img src="img/screenshots/4.png" class="img-responsive" alt="">
             </div>
             <div class="swiper-slide">
-                <img src="img/screenshots/5.jpg" class="img-responsive" alt="">
+                <img src="img/screenshots/5.png" class="img-responsive" alt="">
             </div>
             <div class="swiper-slide">
-                <img src="img/screenshots/6.jpg" class="img-responsive" alt="">
+                <img src="img/screenshots/6.png" class="img-responsive" alt="">
             </div>
             <div class="swiper-slide">
-                <img src="img/screenshots/7.jpg" class="img-responsive" alt="">
+                <img src="img/screenshots/7.png" class="img-responsive" alt="">
             </div>
             <div class="swiper-slide">
-                <img src="img/screenshots/8.jpg" class="img-responsive" alt="">
+                <img src="img/screenshots/8.png" class="img-responsive" alt="">
             </div>
             <div class="swiper-slide">
-                <img src="img/screenshots/9.jpg" class="img-responsive" alt="">
+                <img src="img/screenshots/9.png" class="img-responsive" alt="">
             </div>
             <div class="swiper-slide">
-                <img src="img/screenshots/10.jpg" class="img-responsive" alt="">
+                <img src="img/screenshots/10.png" class="img-responsive" alt="">
             </div>
         </div>
         <!-- Add Pagination -->
@@ -521,9 +521,8 @@
                     <i class="fa fa-4x wow bounceIn text-primary" data-wow-delay=".4s">
                         <img src="img/feature_levelset.jpg" class="img-responsive" alt="">
                     </i>
-                    <h3>Base 42 Levels + user contributed levels</h3>
-                    <p class="text-muted">50+ levels from very trivial one to super complex missions where you need to
-                        be a programmer & physicist.</p>
+                    <h3>Dynamically added new Levels + user contributed levels</h3>
+                    <p class="text-muted">Unlimited levels from very trivial one to super complex missions where you need to be a programmer & physicist.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
