--- a/index.html
+++ b/index.html
@@ -512,8 +512,8 @@
                         <img src="img/feature_physics.jpg" class="img-responsive" alt="">
                     </i>
                     <h3>Physics-Based</h3>
-                    <p class="text-muted">Real Newton physics in zero gravity. Rockets, boosters, elements controled by
-                        accelerometer. Pre-programable units!</p>
+                    <p class="text-muted">Real Newton physics in zero gravity. Rockets, boosters, elements controlled by
+                        accelerometer. Pre-programmable units!</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
@@ -531,7 +531,7 @@
                         <img src="img/feature_exploration.jpg" class="img-responsive" alt="">
                     </i>
                     <h3>The Joy of Exploration</h3>
-                    <p class="text-muted">You have a unique oportunity to explore the unknown by visiting unseen nature,
+                    <p class="text-muted">You have a unique opportunity to explore the unknown by visiting unseen nature,
                         planets & stars.</p>
                 </div>
             </div>
@@ -740,7 +740,7 @@
                 <div class="text-center">
                     <p>Please give your feedback - it is valuable for us and continuous improvement.
                     <p>
-                    <p>Let's buid the game together.</p>
+                    <p>Let's build the game together.</p>
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p>
                         <a href="mailto:gadominas@gmail.com">gadominas@gmail.com</a>
